// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricTransposition transposition should transpose single metric 1`] = `
Object {
  "headers": Array [
    Object {
      "id": "metricNames",
      "metrics": Array [
        Object {
          "header": Object {
            "format": "#,##0",
            "id": "a8908b3c92b6743b1fc71c8b113533bc",
            "title": "# of Accounts",
            "type": "metric",
          },
          "index": 0,
        },
      ],
      "title": "Metric",
      "type": "attrLabel",
      "uri": "/metricGroup",
    },
    Object {
      "format": "#,##0",
      "id": "metricValues",
      "title": "# of Accounts",
      "type": "metric",
      "uri": "/metricValues",
    },
  ],
  "rawData": Array [
    Array [
      Object {
        "header": Object {
          "id": "a8908b3c92b6743b1fc71c8b113533bc",
          "uri": null,
        },
        "id": "metric-0",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 118,
      },
    ],
  ],
}
`;

exports[`MetricTransposition transposition should transpose single metric sliced by attribute 1`] = `
Object {
  "headers": Array [
    Object {
      "id": "label.projectgroup.stage",
      "title": "Stage",
      "type": "attrLabel",
      "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
    },
    Object {
      "id": "metricNames",
      "metrics": Array [
        Object {
          "header": Object {
            "format": "#,##0",
            "id": "a8908b3c92b6743b1fc71c8b113533bc",
            "title": "# of Accounts",
            "type": "metric",
          },
          "index": 1,
        },
      ],
      "title": "Metric",
      "type": "attrLabel",
      "uri": "/metricGroup",
    },
    Object {
      "format": "#,##0",
      "id": "metricValues",
      "title": "# of Accounts",
      "type": "metric",
      "uri": "/metricValues",
    },
  ],
  "rawData": Array [
    Array [
      Object {
        "header": Object {
          "id": "label.projectgroup.stage",
          "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        },
        "id": "1",
        "value": "",
      },
      Object {
        "header": Object {
          "id": "a8908b3c92b6743b1fc71c8b113533bc",
          "uri": null,
        },
        "id": "metric-0",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 1,
      },
    ],
    Array [
      Object {
        "header": Object {
          "id": "label.projectgroup.stage",
          "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        },
        "id": "321199",
        "value": "Churned",
      },
      Object {
        "header": Object {
          "id": "a8908b3c92b6743b1fc71c8b113533bc",
          "uri": null,
        },
        "id": "metric-0",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 25,
      },
    ],
    Array [
      Object {
        "header": Object {
          "id": "label.projectgroup.stage",
          "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        },
        "id": "2288",
        "value": "N/A",
      },
      Object {
        "header": Object {
          "id": "a8908b3c92b6743b1fc71c8b113533bc",
          "uri": null,
        },
        "id": "metric-0",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 1,
      },
    ],
    Array [
      Object {
        "header": Object {
          "id": "label.projectgroup.stage",
          "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        },
        "id": "321198",
        "value": "OK",
      },
      Object {
        "header": Object {
          "id": "a8908b3c92b6743b1fc71c8b113533bc",
          "uri": null,
        },
        "id": "metric-0",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 153,
      },
    ],
    Array [
      Object {
        "header": Object {
          "id": "label.projectgroup.stage",
          "uri": "/gdc/md/budtwmhq7k94ve7rqj49j3620rzsm3u1/obj/2135",
        },
        "id": "321216",
        "value": "Potentially Churned / Salesforce Issues",
      },
      Object {
        "header": Object {
          "id": "a8908b3c92b6743b1fc71c8b113533bc",
          "uri": null,
        },
        "id": "metric-0",
        "value": "# of Accounts",
      },
      Object {
        "format": "#,##0",
        "marker": Object {
          "enabled": true,
        },
        "y": 27,
      },
    ],
  ],
}
`;
